# fastlink

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
auth365/: backend.py  exceptions.py  jwt.py  schemas.py  tokens.py  utils.py
auth365/fastapi/: exceptions.py  transport.py  transports.py
auth365/providers/: base.py  exceptions.py  google.py  telegram.py  yandex.py
examples/: config.py  google.py  jwt.py  telegram.py  yandex.py
fastlink/: __init__.py  constants.py  exceptions.py  schemas.py
fastlink/base/: client.py  provider.py
fastlink/client/: abstract.py  httpx.py  schemas.py  utils.py
fastlink/google/: client.py  provider.py
fastlink/integrations/fastapi/: transport.py
fastlink/jwt/: __init__.py  manager.py  schemas.py
fastlink/telegram/: auth.py  provider.py  schemas.py  utils.py
fastlink/yandex/: client.py  provider.py
